<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.LoginActivity"
    android:background="@color/light_cyan">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_fisherville"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:layout_gravity="center"
        android:visibility="gone">

        <co.ceryle.radiorealbutton.RadioRealButtonGroup
            android:id="@+id/radio_group"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            app:rrbg_selectorAnimationType="translate_x"
            app:rrbg_selectorFullSize="false"
            app:rrbg_selectorColor="@color/prussian_blue"
            app:rrbg_radius="@dimen/_5sdp"
            app:rrbg_selectorRadius="@dimen/_2sdp"
            app:rrbg_selectorSize="1.75dp"
            app:rrbg_backgroundColor="@color/light_cyan"
            app:rrbg_borderColor="@android:color/transparent"
            app:rrbg_borderSize="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <co.ceryle.radiorealbutton.RadioRealButton
                android:id="@+id/radio_fisherman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_ripple="true"
                app:rrb_checked="true"
                app:rrb_text="@string/fisherman"
                app:rrb_textSize="@dimen/_10ssp"
                app:rrb_textColorTo="@color/font_color"
                app:rrb_textColor="@color/font_color"/>

            <co.ceryle.radiorealbutton.RadioRealButton
                android:id="@+id/radio_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_ripple="true"
                app:rrb_text="@string/seller"
                app:rrb_textSize="@dimen/_10ssp"
                app:rrb_textColorTo="@color/font_color"
                app:rrb_textColor="@color/font_color"/>

            <co.ceryle.radiorealbutton.RadioRealButton
                android:id="@+id/radio_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_ripple="true"
                app:rrb_text="@string/customer"
                app:rrb_textSize="@dimen/_10ssp"
                app:rrb_textColorTo="@color/font_color"
                app:rrb_textColor="@color/font_color"/>

        </co.ceryle.radiorealbutton.RadioRealButtonGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_phone_number"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="11"
            android:textColor="@color/font_color"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/open_sans_r"
            android:drawableStart="@drawable/ic_smartphone"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_6sdp"
            android:paddingEnd="@dimen/_6sdp"
            android:drawablePadding="@dimen/_4sdp"
            android:background="@drawable/card_outline_bg"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_32sdp"
            android:layout_below="@id/login_phone_number"
            android:text="@string/sign_in"
            android:textSize="@dimen/_10ssp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/open_sans_r"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/ripple_button_bg"
            app:layout_constraintTop_toBottomOf="@id/login_phone_number"
            app:layout_constraintEnd_toEndOf="@id/login_phone_number"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/terms_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/_9sdp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>